--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
 <!-- <script src="https://lidrekon.ru/slep/js/jquery.js"></script>
 <script src="https://lidrekon.ru/slep/js/uhpv-full.min.js"></script> -->
 
+<script src="https://cdn.tiny.cloud/1/35l6yg65rjt7ynwitk4g3bbozq1zv9xcyfj00iilb33w2qc2/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
     <meta name="theme-color" content="#000000" />
     <meta
